--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discord Profile Page</title>
+    <title></title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="cursor.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -21,6 +21,7 @@
     <script src="js/particles-config.js"></script>
     <script src="js/disable-right-click.js"></script>
     <script src="js/welcome-message.js"></script>
+    <script src="js/hitokoto.js"></script>
 </head>
 <body>
     <div id="particles-js"></div>
@@ -38,8 +39,8 @@
                 <div class="header-content">
                     <div class="left-header">
                         <h1 id="profile-username" class="username"></h1>
-                        <div class="discord-id-container">
-                            <div id="typewriter" class="discord-id"></div>
+                        <div class="nickname-container">
+                            <div id="typewriter" class="nickname"></div>
                             <span class="cursor">|</span>
                         </div>
                     </div>
@@ -55,6 +56,19 @@
             </div>
             
             <div class="profile-info">
+                <!-- Hitokoto Quote Section -->
+                <div id="hitokoto-container" class="hitokoto-container">
+                    <div class="hitokoto-quote">
+                        <i class="fas fa-quote-left quote-icon"></i>
+                        <span id="hitokoto-text">加载中...</span>
+                        <i class="fas fa-quote-right quote-icon"></i>
+                    </div>
+                    <div class="hitokoto-source">— <span id="hitokoto-source">hitokoto.cn</span></div>
+                    <button id="refresh-hitokoto" class="refresh-hitokoto" title="刷新一言">
+                        <i class="fas fa-sync-alt"></i>
+                    </button>
+                </div>
+                
                 <div id="social-links" class="social-links">
                     <!-- Social links will be dynamically generated from config -->
                 </div>
