--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,11 @@
     <meta name="theme-color" content="#5865F2" />
     <meta
       name="description"
-      content="顾槿淮的个人主页 - Personal Website of 顾槿淮"
+      content="顾瑾淮的个人主页 - Personal Website of 顾瑾淮"
     />
     
     <!-- Favicon -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="any" />
-    <link rel="icon" href="%PUBLIC_URL%/favicons/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicons/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- Additional favicon tags -->
